Feat: 이미지 업로드 기능 추가(미사용)